feat: Complete Sprint 1 mobile app foundations and add Sprint 2 parallel development plan
- Set up GroceryAdmin app foundation with Clean Architecture
- Set up GroceryDelivery app foundation with Clean Architecture
- Fixed Gradle build configurations across all apps
- Added comprehensive Sprint 2 parallel development plan (Option B) to PROJECT_CONTEXT.md
- All three apps (Customer, Admin, Delivery) successfully building and running
- Ready for Sprint 2 feature development with parallel team approach

Technical updates:
- Fixed kotlin-kapt plugin references across all apps
- Updated package names and application IDs for Admin and Delivery apps
- Added missing Gradle wrapper components
- Updated themes and string resources for app branding
- Added mobile testing plan documentation